--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.2",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
+    "firebase": "^10.10.0",
     "json-server": "^1.0.0-alpha.23",
     "json-server-auth": "^2.1.0",
     "react": "^18.2.0",
